--- a/css/sass-demo1.scss
+++ b/css/sass-demo1.scss
@@ -1,4 +1,8 @@
 // Add variables here
+$color-primary: blue;
+$color-pale: #cec8ff;
+$body-font: "Open Sans", sans-serif;
+$header-font: "Lobster", cursive;
 
 body {
     font-family: $body-font;
